[update] 问题table表头调整

--- a/index.html
+++ b/index.html
@@ -138,9 +138,11 @@
     }
     .table-head-room {
       background-color: #8EAADB;
+      text-align: center;
     }
     .table-head {
       background-color: #9bc0eb;
+      text-align: center;
     }
 
     .statistics-tip {
@@ -342,7 +344,7 @@
       <h2>三、房屋查验内容</h2>
       <h3>（一）质量问题明细</h3>
       <table>
-        <thead>
+        <tbody>
           <tr>
             <th class="table-head-room" colspan="3">房间</th>
           <tr>
@@ -351,8 +353,6 @@
             <th class="table-head">问题详情</th>
             <th class="table-head" style="width: 403px;">照片</th>
           </tr>
-        </thead>
-        <tbody>
           <tr>
             <td>1</td>
             <td>
