[update] 调整序号列宽度，表头th内边距

--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
       padding: 10px 15px;
       box-sizing: border-box;
     }
+    th {
+      padding: 6px 10px;
+    }
     td.img-cell {
       padding: 1px;
     }
@@ -349,7 +352,7 @@
             <th class="table-head-room" colspan="3">房间</th>
           <tr>
           <tr>
-            <th class="table-head" style="width: 50px;">序号</th>
+            <th class="table-head" style="width: 58px;">序号</th>
             <th class="table-head">问题详情</th>
             <th class="table-head" style="width: 403px;">照片</th>
           </tr>
