[update] 序号单元格内容居中

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
             <th class="table-head" style="width: 403px;">照片</th>
           </tr>
           <tr>
-            <td>1</td>
+            <td class="tac">1</td>
             <td>
               <p>分类：顶棚工程-顶棚基层</p>
               <p>问题描述：裂纹</p>
@@ -370,7 +370,7 @@
             </td>
           </tr>
           <tr>
-            <td>2</td>
+            <td class="tac">2</td>
             <td>
               <p>分类：顶棚工程-顶棚基层</p>
               <p>问题描述：裂纹</p>
@@ -402,7 +402,7 @@
           </tr>
           <!-- 示例2 -->
           <tr>
-            <td>3</td>
+            <td class="tac">3</td>
             <td>
               <p>分类：厨房工程-吸油烟机</p>
               <p>问题描述：排烟管包管破损漏风</p>
@@ -431,7 +431,7 @@
           </tr>
           <!-- 示例3 -->
           <tr>
-            <td>4</td>
+            <td class="tac">4</td>
             <td>
               <p>分类：卫浴工程-淋浴间</p>
               <p>问题描述：渗漏挡水条下方漏水</p>
@@ -444,7 +444,7 @@
             </td>
           </tr>
           <tr>
-            <td>5</td>
+            <td class="tac">5</td>
             <td>
               <p>分类：卫浴工程-淋浴间</p>
               <p>问题描述：渗漏挡水条下方漏水</p>
