--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
       box-sizing: border-box;
       font-size: 20px;
       font-family: Source Han Sans CN;
+      font-weight: 300;
     }
     .page {
       /* min-height: 1123px; */
