[update] th加粗字重调为500

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     }
     th {
       padding: 6px 10px;
-      font-weight: bold;
+      font-weight: 500;
     }
     td p, td div {
       line-height: 1.8;
