--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
       box-sizing: border-box;
       font-size: 20px;
       font-family: Source Han Sans CN;
-      font-weight: 300;
     }
     .page {
       /* min-height: 1123px; */
@@ -151,7 +150,7 @@
     }
     th {
       padding: 6px 10px;
-      font-weight: 500;
+      font-weight: bold;
     }
     td p, td div {
       line-height: 1.8;
