[update] 三房屋查验内容不另起页面

--- a/index.html
+++ b/index.html
@@ -369,11 +369,13 @@
           </tbody>
         </table>
       </div>
-      <div>
+      <!-- <div>
         <img src="std-report.jpg" alt="指数报告" width="100%" height="auto">
-      </div>
+      </div> -->
+      <h2>查验总结分析</h2>
+      <p>查验总结分析内容查验总结分析内容查验总结分析内容查验总结分析内容查验总结分析内容查验总结分析内容查验总结分析内容查验总结分析内容查验总结分析内容查验总结分析内容查验总结分析内容查验总结分析内容</p>
     </section>
-    <section class="page page-start">
+    <section>
       <h2>三、房屋查验内容</h2>
       <h3>（一）质量问题明细</h3>
       <table>
