--- a/index.html
+++ b/index.html
@@ -418,8 +418,7 @@
           </tr>
           <tr>
             <td colspan="3">
-              <div style="white-space: pre-line;">
-                标准依据：《住宅室内装饰装修工程质量验收规范》 JGJ／T 304-2013
+              <div style="white-space: pre-line;">标准依据：《住宅室内装饰装修工程质量验收规范》 JGJ／T 304-2013
                 4.4.1 抹灰顶棚基层材料的品种、规格和性能应符合设计要求。 
                 4.4.2 抹灰顶棚基层与基体之间以及分层施工的基层，各层之 间应粘结牢固，无裂纹。
                 4.4.3 基层表面应顺平、接槎平整，无爆灰和裂缝。
@@ -429,8 +428,7 @@
                 2 既有建筑墙面在用腻子找平或直接涂饰涂料前应清除疏松的旧装修层，并涂刷界面剂；
                 3 混凝土或抹灰基层在用溶剂型腻子找平或直接涂刷溶剂型涂料时，含水率不得大于8%；在用乳液型腻子找平或直接涂刷乳液型涂料时，含水率不得大于10%,木材基层的含水率不得大于12%；
                 4 找平层应平整、坚实、牢固，无粉化、起皮和裂缝；内墙找平层的粘结强度应符合现行行业标准《建筑室内用腻子》JG/T298的规定；
-                5 厨房、卫生间墙面的找平层应使用耐水腻子。
-              </div>
+                5 厨房、卫生间墙面的找平层应使用耐水腻子。</div>
             </td>
           </tr>
           <!-- 示例2 -->
